load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")
load("//pkg/version:def.bzl", "version_x_defs")

go_library(
    name = "go_default_library",
    srcs = ["main.go"],
    importpath = "github.com/jetstack/tarmak/cmd/tagging_control",
    visibility = ["//visibility:private"],
    deps = ["//cmd/tagging_control/cmd:go_default_library"],
)

go_binary(
    name = "tagging_control",
    embed = [":go_default_library"],
    pure = "on",
    visibility = ["//visibility:public"],
    x_defs = version_x_defs(),
)

go_binary(
    name = "tagging_control_linux_amd64",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
    x_defs = version_x_defs(),
    goos = "linux",
    goarch = "amd64",
    pure = "on",
)
