load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["main.go"],
    importpath = "github.com/jetstack/tarmak/hack/swagger-gen",
    visibility = ["//visibility:private"],
    deps = [
        "//docs/generated/reference/openapi:go_default_library",
        "//vendor/github.com/go-openapi/spec:go_default_library",
        "//vendor/k8s.io/kube-openapi/pkg/common:go_default_library",
    ],
)

go_binary(
    name = "swagger-gen",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)
