load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "image.go",
        "packer.go",
    ],
    importpath = "github.com/jetstack/tarmak/pkg/packer",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/apis/tarmak/v1alpha1:go_default_library",
        "//pkg/tarmak/interfaces:go_default_library",
        "//vendor/github.com/hashicorp/go-multierror:go_default_library",
        "//vendor/github.com/hashicorp/packer/builder/amazon/ebs:go_default_library",
        "//vendor/github.com/hashicorp/packer/packer:go_default_library",
        "//vendor/github.com/hashicorp/packer/provisioner/file:go_default_library",
        "//vendor/github.com/hashicorp/packer/provisioner/puppet-masterless:go_default_library",
        "//vendor/github.com/hashicorp/packer/provisioner/shell:go_default_library",
        "//vendor/github.com/hashicorp/packer/template:go_default_library",
        "//vendor/github.com/hashicorp/packer/version:go_default_library",
        "//vendor/github.com/sirupsen/logrus:go_default_library",
    ],
)
