load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = ["puppet.go"],
    importpath = "github.com/jetstack/tarmak/pkg/puppet",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/apis/cluster/v1alpha1:go_default_library",
        "//pkg/apis/tarmak/v1alpha1:go_default_library",
        "//pkg/tarmak/interfaces:go_default_library",
        "//pkg/tarmak/utils:go_default_library",
        "//vendor/github.com/docker/docker/pkg/archive:go_default_library",
        "//vendor/github.com/hashicorp/go-multierror:go_default_library",
        "//vendor/github.com/sirupsen/logrus:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    srcs = ["puppet_test.go"],
    embed = [":go_default_library"],
    deps = ["//pkg/apis/cluster/v1alpha1:go_default_library"],
)
