load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = ["tagging_control.go"],
    importpath = "github.com/jetstack/tarmak/pkg/tagging_control",
    visibility = ["//visibility:public"],
    deps = [
        "//vendor/github.com/aws/aws-sdk-go/aws:go_default_library",
        "//vendor/github.com/aws/aws-sdk-go/aws/ec2metadata:go_default_library",
        "//vendor/github.com/aws/aws-sdk-go/aws/session:go_default_library",
        "//vendor/github.com/aws/aws-sdk-go/service/ec2:go_default_library",
        "//vendor/golang.org/x/crypto/ssh:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    srcs = ["tagging_control_test.go"],
    embed = [":go_default_library"],
    deps = ["//vendor/golang.org/x/crypto/ssh:go_default_library"],
)
