load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = [
        "cluster.go",
        "cluster_apply.go",
        "cluster_debug.go",
        "cluster_debug_puppet.go",
        "cluster_debug_puppet_build-tar.go",
        "cluster_debug_terraform.go",
        "cluster_debug_terraform_shell.go",
        "cluster_destroy.go",
        "cluster_force-unlock.go",
        "cluster_images.go",
        "cluster_images_build.go",
        "cluster_images_list.go",
        "cluster_init.go",
        "cluster_instances.go",
        "cluster_instances_list.go",
        "cluster_instances_ssh.go",
        "cluster_kubeconfig.go",
        "cluster_kubectl.go",
        "cluster_list.go",
        "cluster_plan.go",
        "cluster_set-current.go",
        "cluster_ssh.go",
        "environment.go",
        "environment_init.go",
        "environment_list.go",
        "init.go",
        "kubeconfig.go",
        "kubectl.go",
        "provider.go",
        "provider_init.go",
        "provider_list.go",
        "provider_validate.go",
        "root.go",
        "terraform.go",
        "version.go",
    ],
    importpath = "github.com/jetstack/tarmak/cmd/tarmak/cmd",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/apis/cluster/v1alpha1:go_default_library",
        "//pkg/apis/tarmak/v1alpha1:go_default_library",
        "//pkg/tarmak:go_default_library",
        "//pkg/tarmak/utils:go_default_library",
        "//pkg/tarmak/utils/consts:go_default_library",
        "//pkg/terraform:go_default_library",
        "//pkg/version:go_default_library",
        "//vendor/github.com/sirupsen/logrus:go_default_library",
        "//vendor/github.com/spf13/cobra:go_default_library",
        "//vendor/github.com/spf13/pflag:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    srcs = ["tarmak_test.go"],
    embed = [":go_default_library"],
    deps = ["//vendor/github.com/spf13/cobra:go_default_library"],
)
