load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "agent.go",
        "root.go",
        "server.go",
        "tag.go",
        "version.go",
    ],
    importpath = "github.com/jetstack/tarmak/cmd/wing/cmd",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/version:go_default_library",
        "//pkg/wing:go_default_library",
        "//pkg/wing/server:go_default_library",
        "//pkg/wing/tags:go_default_library",
        "//vendor/github.com/sirupsen/logrus:go_default_library",
        "//vendor/github.com/spf13/cobra:go_default_library",
        "//vendor/k8s.io/apiserver/pkg/server:go_default_library",
        "//vendor/k8s.io/apiserver/pkg/util/logs:go_default_library",
    ],
)
