load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = [
        "cluster.go",
        "configuration.go",
        "init.go",
        "roles.go",
        "wing.go",
    ],
    importpath = "github.com/jetstack/tarmak/pkg/tarmak/cluster",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/apis/cluster/v1alpha1:go_default_library",
        "//pkg/apis/tarmak/v1alpha1:go_default_library",
        "//pkg/apis/wing/v1alpha1:go_default_library",
        "//pkg/tarmak/config:go_default_library",
        "//pkg/tarmak/instance_pool:go_default_library",
        "//pkg/tarmak/interfaces:go_default_library",
        "//pkg/tarmak/role:go_default_library",
        "//pkg/tarmak/utils/input:go_default_library",
        "//pkg/wing/client/clientset/versioned:go_default_library",
        "//pkg/wing/client/clientset/versioned/typed/wing/v1alpha1:go_default_library",
        "//vendor/github.com/cenkalti/backoff:go_default_library",
        "//vendor/github.com/hashicorp/go-multierror:go_default_library",
        "//vendor/github.com/hashicorp/go-version:go_default_library",
        "//vendor/github.com/sirupsen/logrus:go_default_library",
        "//vendor/golang.org/x/net/context:go_default_library",
        "//vendor/k8s.io/apimachinery/pkg/apis/meta/v1:go_default_library",
        "//vendor/k8s.io/apimachinery/pkg/util/sets:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    srcs = ["cluster_test.go"],
    embed = [":go_default_library"],
    deps = [
        "//pkg/apis/cluster/v1alpha1:go_default_library",
        "//pkg/tarmak/config:go_default_library",
        "//pkg/tarmak/mocks:go_default_library",
        "//vendor/github.com/golang/mock/gomock:go_default_library",
        "//vendor/github.com/sirupsen/logrus:go_default_library",
    ],
)
