load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["initialize.go"],
    importpath = "github.com/jetstack/tarmak/pkg/tarmak/initialize",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/apis/cluster/v1alpha1:go_default_library",
        "//pkg/apis/tarmak/v1alpha1:go_default_library",
        "//pkg/tarmak/cluster:go_default_library",
        "//pkg/tarmak/environment:go_default_library",
        "//pkg/tarmak/interfaces:go_default_library",
        "//pkg/tarmak/provider:go_default_library",
        "//pkg/tarmak/utils/input:go_default_library",
        "//vendor/github.com/go-ozzo/ozzo-validation:go_default_library",
        "//vendor/github.com/go-ozzo/ozzo-validation/is:go_default_library",
        "//vendor/github.com/hashicorp/go-multierror:go_default_library",
        "//vendor/github.com/sirupsen/logrus:go_default_library",
    ],
)
