load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = [
        "instance_pool.go",
        "volume.go",
    ],
    importpath = "github.com/jetstack/tarmak/pkg/tarmak/instance_pool",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/apis/cluster/v1alpha1:go_default_library",
        "//pkg/tarmak/interfaces:go_default_library",
        "//pkg/tarmak/role:go_default_library",
        "//pkg/tarmak/utils:go_default_library",
        "//vendor/github.com/hashicorp/go-multierror:go_default_library",
        "//vendor/github.com/sirupsen/logrus:go_default_library",
        "//vendor/k8s.io/apimachinery/pkg/apis/meta/v1/validation:go_default_library",
        "//vendor/k8s.io/apimachinery/pkg/util/validation/field:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    srcs = [
        "instance_pool_test.go",
        "volume_test.go",
    ],
    embed = [":go_default_library"],
    deps = [
        "//pkg/apis/cluster/v1alpha1:go_default_library",
        "//pkg/tarmak/mocks:go_default_library",
        "//pkg/tarmak/role:go_default_library",
        "//vendor/github.com/golang/mock/gomock:go_default_library",
        "//vendor/github.com/sirupsen/logrus:go_default_library",
        "//vendor/k8s.io/apimachinery/pkg/api/resource:go_default_library",
    ],
)
