load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["interfaces.go"],
    importpath = "github.com/jetstack/tarmak/pkg/tarmak/interfaces",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/apis/cluster/v1alpha1:go_default_library",
        "//pkg/apis/tarmak/v1alpha1:go_default_library",
        "//pkg/tarmak/role:go_default_library",
        "//pkg/tarmak/utils/input:go_default_library",
        "//pkg/wing/client/clientset/versioned:go_default_library",
        "//vendor/github.com/hashicorp/vault/api:go_default_library",
        "//vendor/github.com/jetstack/vault-unsealer/pkg/kv:go_default_library",
        "//vendor/github.com/sirupsen/logrus:go_default_library",
    ],
)
