load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = ["role.go"],
    importpath = "github.com/jetstack/tarmak/pkg/tarmak/role",
    visibility = ["//visibility:public"],
)

go_test(
    name = "go_default_test",
    srcs = ["role_test.go"],
    embed = [":go_default_library"],
)
