load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = ["plan.go"],
    importpath = "github.com/jetstack/tarmak/pkg/terraform/plan",
    visibility = ["//visibility:public"],
    deps = ["//vendor/github.com/hashicorp/terraform/terraform:go_default_library"],
)

go_test(
    name = "go_default_test",
    srcs = ["plan_test.go"],
    embed = [":go_default_library"],
)
