load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = ["apiserver.go"],
    importpath = "github.com/jetstack/tarmak/pkg/wing/apiserver",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/apis/wing:go_default_library",
        "//pkg/apis/wing/install:go_default_library",
        "//pkg/version:go_default_library",
        "//pkg/wing/registry:go_default_library",
        "//pkg/wing/registry/wing/instance:go_default_library",
        "//vendor/k8s.io/apimachinery/pkg/apis/meta/v1:go_default_library",
        "//vendor/k8s.io/apimachinery/pkg/runtime:go_default_library",
        "//vendor/k8s.io/apimachinery/pkg/runtime/schema:go_default_library",
        "//vendor/k8s.io/apimachinery/pkg/runtime/serializer:go_default_library",
        "//vendor/k8s.io/apiserver/pkg/registry/rest:go_default_library",
        "//vendor/k8s.io/apiserver/pkg/server:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    srcs = ["scheme_test.go"],
    embed = [":go_default_library"],
    deps = ["//vendor/k8s.io/apimachinery/pkg/api/apitesting/roundtrip:go_default_library"],
)
